--- a/SLL/SEE/2a/index.html
+++ b/SLL/SEE/2a/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <head>
     <title>Shop</title>
+    <script>
+        function sub(){
+            var a=document.getElementById("price");
+            var price=a.options[a.selectedIndex].value;
+            var qty=document.getElementById("qty").value;
+            var ans=Number(price)*Number(qty);
+            // console.log(qty);
+            var v=document.getElementById("msg");
+            v.innerHTML=ans
+        }
+    </script>
 </head>
 <body>
     <input type="text" placeholder="Item Name"/><br/><br/>
-    <select>
+    <select id="price">
         <option>100</option>
         <option>200</option>   
         <option>300</option>      
     </select><br/><br/>
-    <input type="number" placeholder="Quantity"/><br/><br/>
-    <button>Submit</button>
+    <input id="qty" type="number" placeholder="Quantity"/><br/><br/>
+    <button onclick="sub()">Submit</button>
     <button>Paid</button><br/><br/>
+    Total Price:  <span id="msg"></span>
 </body>
 </html>
