--- a/SLL-finals/SEE/8b/8b.html
+++ b/SLL-finals/SEE/8b/8b.html
@@ -1,49 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Tesla Catalog</title>
+    <title>Hospital</title>
     <script type="text/javascript" src="details.js"></script>
-    <style>
-      table {
-        text-align: center;
-        width: 100%;
-      }
-      td {
-        font-size: xx-large;
-      }
-      th {
-        font-size: x-large;
-        background-color: #4caf50;
-        color: white;
-      }
-      th:hover {
-        background-color: #4ca;
-      }
-    </style>
   </head>
   <body>
-    <h3 style="text-align:center">Hover a Tesla Type</h3>
-    <br />
-    <table>
-      <tr id="menu"></tr>
-    </table>
-
-    <br />
-    <hr />
-    <br />
-    <table class="table" id="data-table" hidden>
-      <tr>
-        <td>Name</td>
-        <td id="model"></td>
-      </tr>
-      <tr>
-        <td>Price</td>
-        <td id="price"></td>
-      </tr>
-      <tr>
-        <td>Year</td>
-        <td id="year"></td>
-      </tr>
-    </table>
+    <h1 id="hospital"></h1>
+    <div id="patient">Patient details</div>
+    <div id="details"></div>
+    <div id="tests"></div>
   </body>
 </html>
